--- a/demo-park-api/src/main/resources/application.properties
+++ b/demo-park-api/src/main/resources/application.properties
@@ -1,4 +1,17 @@
- spring.application.name=demo-park-api
- # LOCALE
+spring.application.name=demo-park-api
+
+# LOCALE
 spring.mvc.locale-resolver=fixed
 spring.mvc.locale=pt_BR
+
+# MySQL Database Connection Properties
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/demo_park?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=America/Sao_Paulo
+spring.datasource.username=root
+spring.datasource.password=12345
+
+# JPA
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
