--- a/demo-park-api/src/main/resources/application.properties
+++ b/demo-park-api/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.datasource.password=12345
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.open-in-view=false
