--- a/demo-park-api/src/main/resources/application.properties
+++ b/demo-park-api/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
+
+# Springdoc OpenApi 3.1 & Swagger 3
+springdoc.swagger-ui.path=/docs-park.html
+springdoc.api-docs.path=/docs-park
+springdoc.packagesToScan=com.mballem.demo_park_api.web.controller
